gatekeeper/constraints/4-constraints.yaml
---
# Luật 1: Cấm sử dụng image tag :latest
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: block-latest-tag
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

---
# Luật 2: Bắt buộc phải khai báo resources.limits
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: require-cpu-memory-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpu: "200m"
    memory: "256Mi"

---
---
---
# Luật 3: Cấm chạy quyền Root (Map chính xác với template k8spspallowedusers)
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPspAllowedUsers
metadata:
  name: enforce-non-root
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    runAsUser:
      rule: "MustRunAsNonRoot"

---
# Luật 4: Cấm hostNetwork: true
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetwork
metadata:
  name: block-host-network
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
