gatekeeper/constraints/constraint-owner.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1 
kind: K8sRequiredLabels
metadata:
  name: require-owner-label
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    labels: ["owner"]
